--- a/education/layout.html
+++ b/education/layout.html
@@ -39,7 +39,7 @@
                     <!-- <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li> -->
                     <li><a class="whitelink" href="PhD.html"> My Novel Ph.D. Research</a></li>
                     <li><a class="whitelink" href="MSc.html"> Master's Degree in Mech. Eng.</a></li>
-                    <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>  
+                    <!-- <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>   -->
                     <li><a class="whitelink" href="award.html"> Academic Awards </a></li>    
                     <li><a class="whitelink" href="publication.html"> Publications & Conferences </a></li>
                     <li><a class="whitelink" href="engineering.html"> Is Engineering right for me? </a></li>    
@@ -65,7 +65,7 @@
                             <li><a class="whitelink" href="experimental.html"> Experimental Fluid Mechanics </a></li>
                             <li><a class="whitelink" href="PhD.html"> My Novel Ph.D. Research</a></li>
                             <li><a class="whitelink" href="MSc.html"> Master's Degree in Mech. Eng.</a></li>
-                            <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>  
+                            <!-- <li><a class="whitelink" href="BSc.html"> Bachelor's Degree in Mech. Eng. </a></li>   -->
                             <li><a class="whitelink" href="award.html"> Academic Awards </a></li>    
                             <li><a class="whitelink" href="publication.html"> Publications & Conferences </a></li>
                             <li><a class="whitelink" href="engineering.html"> Is Engineering right for me? </a></li>    
