--- a/professional/CS50.html
+++ b/professional/CS50.html
@@ -151,7 +151,7 @@
             such as maintenance date, maintenance items, type of maintenance, responsible persons etc.  
         </p>
     
-        <h3>Final Project</h3>
+        <!-- <h3>Final Project</h3>
         <hr>
         <p>
             The main driver for me to take this course is to design an application, which can make a difference in my community. I hope to design an online educational platform that greatly benefits those who do not have access to the basic education. The most vulnerable in our community undoubtly needs education to transform their lives. Using SQL database with Python web programming, I have designed a basic structure for this idea. Here is my project description and video presentation.   
@@ -185,7 +185,7 @@
                 </div>
             </div>      
             </div>
-        </div>
+        </div> -->
     
         <div class="paragraph image">
             <iframe width="100%" height="500" src="https://www.youtube.com/embed/H0Fs-RiPuEI?autoplay=0&rel=0">
