--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -173,7 +173,7 @@
                 <td>Chinese Language Apostolate Commission, Church of Holy Family Kajang</td>
                 <td>N.A.</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>2013 - 2014</td>
                 <td>Treasurer</td>
                 <td>Institution of Mechanical Engineers (IMechE) Student Chapter, UNITEN</td>
@@ -196,11 +196,11 @@
                 <td>Praise and Worship @ Musical Director</td>
                 <td>Tenaga Christian Fellowship, UNITEN</td>
                 <td><a href="../pdf/2012-02 P&W Director.pdf" target="_blank">Access</a></td>
-            </tr>
+            </tr> -->
         </table>
     </p>
 
-    <p>
+    <!-- <p>
         I was also awarded as the best student in extra-curricular activity involvement during my <a href="../education/BSc.html">undergraduate studies</a> at UNITEN. My extra-curricular report that highlights my student leadership and volunteer experience is available below. 
     </p>
 
@@ -227,7 +227,7 @@
             </div>
         </div>      
         </div>
-    </div>
+    </div> -->
     <p class="enter"></p>
 
     <h3>
