--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -132,6 +132,12 @@
                 <th>Access the cert</th>
             </tr>
             <tr>
+                <td>2025 - Present</td>
+                <td>Mentor</td>
+                <td><a href="https://ospe.on.ca/members/mentorship/">Ontario Society of Professional Engineers</a></td>
+                <td>N.A.</a></td>
+            </tr>
+            <tr>
                 <td>2023 - 2024</td>
                 <td>McGill Mentor for New Domestic Students</td>
                 <td><a href="https://www.mcgill.ca/cle/peer-programs/new-student-buddy-program">Campus Life & Engagement, McGill University</a></td>
