--- a/professional/summary.html
+++ b/professional/summary.html
@@ -112,7 +112,7 @@
                 <td>University of Saskatchewan</td>
                 <td><a href="../pdf/2018-09 Marking and Evaluation.pdf" target="_blank">Access</a></td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>Jun 2018</td>
                 <td>Advanced Spoken English</td>
                 <td>University of Saskatchewan</td>
@@ -135,7 +135,7 @@
                 <td>Level 1 TRIZ practitioner</td>
                 <td>International TRIZ Association</td>
                 <td><a href="../pdf/2013-07 TRIZ.pdf" target="_blank">Access</a></td>
-            </tr>
+            </tr> -->
             
             </tbody>
         </table>
@@ -146,8 +146,8 @@
         <hr>
         <div class="paragraph big-screen">
             <span class="a">Programming</span>: &emsp; C, Python, SQL, MATLAB, MS Excel (Advanced)<br>
-            <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot -->
-            <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> --> <br>
+            <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot<br>
+            <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs<br>
             <span class="a">Word Processor</span>: &emsp; LaTex - <span style="font-size: smaller;">read my <a href="https://harvest.usask.ca/handle/10388/12492", target="blank">M.Sc. thesis</a> for a sample LaTex document</span><br>
             <span class="a">Project Management</span>: &emsp; Primavera, MS Project <br>
             <span class="a">Computer-Aided Design</span>: &emsp; SolidWorks, AutoCAD <br>
@@ -202,13 +202,13 @@
                 <td>IPEC Project Systems</td>
                 <td><a href="../pdf/2016-12 Primavera.pdf" target="_blank">Access</a></td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>May 2016</td>
                 <td>Microsoft Project (Intermediate to Advanced)</td>
                 <td>Aptech</td>
                 <td><a href="../pdf/2016-05 MS Project.pdf" target="_blank">Access</a></td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
                 <td>Jun 2015</td>
                 <td>Microsoft Excel Dashboard & Reporting</td>
                 <td>I-World Tech Training</td>
@@ -225,7 +225,7 @@
                 <td>Autodesk Inventor</td>
                 <td>Autodesk</td>
                 <td><a href="../pdf/2014-03 Autodesk Inventor.pdf" target="_blank">Access</a></td>
-            </tr>
+            </tr> -->
             </tbody>
         </table>
         
