--- a/professional/summary.html
+++ b/professional/summary.html
@@ -140,7 +140,7 @@
             </tbody>
         </table>
     
-        <h3>
+        <!-- <h3>
             Sofware Skills
         </h3>
         <hr>
@@ -154,15 +154,15 @@
         </div>
         <style>
             .a {display: inline-block; width: 190px;}
-        </style>
+        </style> -->
 
-        <div class="paragraph small-screen">
+        <!-- <div class="paragraph small-screen">
             <b>Programming</b>: C, Python, SQL, MATLAB, MS Excel (Advanced), Visual Basic <br><p class="enter_small"></p>
             <b>Plotting Tools</b>: OriginLab, Tecplot - <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs</span> <br><p class="enter_small"></p>
             <b>Word Processor</b>: LaTex - <span style="font-size: smaller;">read my <a href="https://harvest.usask.ca/handle/10388/12492", target="blank">M.Sc. thesis</a> for a sample LaTex document</span><br><p class="enter_small"></p>
             <b>Project Management</b>: Primavera, MS Project <br><p class="enter_small"></p>
             <b>Computer-Aided Design</b>: SolidWorks  <br>
-        </div>
+        </div> -->
     
         <table class="TFtable">
             <colgroup>
