--- a/professional/summary.html
+++ b/professional/summary.html
@@ -140,11 +140,11 @@
             </tbody>
         </table>
     
-        <!-- <h3>
+        <h3>
             Sofware Skills
         </h3>
         <hr>
-        <div class="paragraph big-screen">
+        <!-- <div class="paragraph big-screen">
             <span class="a">Programming</span>: &emsp; C, Python, SQL, MATLAB, MS Excel (Advanced)<br>
             <span class="a">Plotting Tools</span>: &emsp; OriginLab, Tecplot<br>
             <span style="font-size: smaller;">read my <a href="../education/experimental.html">M.Sc. research</a> for some sample animations and graphs<br>
