--- a/professional/summary.html
+++ b/professional/summary.html
@@ -74,7 +74,7 @@
                 <td>Apr 2023</td>
                 <td><a href="../professional/FACC511.html">Instructional Design in Engineering Education</a></td>
                 <td>Faculty of Engineering, McGill University</td>
-                <td>In my transcript</td>
+                <td>In transcript</td>
             </tr>
             <tr>
                 <td>Mar 2022</td>
