--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <li><i class="flag flag-icon flag-icon-gb"></i> English</li>  
                             <li><i class="flag flag-icon flag-icon-cn"></i> Chinese</li>
                             <li><i class="flag flag-icon flag-icon-my"></i> Malay</li>
-                            <li><i class="flag flag-icon flag-icon-fr"></i> French (learning)</li>
+                            <li><i class="flag flag-icon flag-icon-fr"></i> French</li>
                         </ul>    
                     </div>
                 
@@ -171,7 +171,7 @@
                                     <li><i class="flag-icon flag-icon-gb"></i> English  
                                     <i class="flag-icon flag-icon-cn"></i> Chinese
                                     <i class="flag-icon flag-icon-my"></i> Malay
-                                    <i class="flag flag-icon flag-icon-fr"></i> French (learning)</li>
+                                    <i class="flag flag-icon flag-icon-fr"></i> French</li>
                                 </ul>    
                             </div>
                         
