--- a/education/award.html
+++ b/education/award.html
@@ -71,7 +71,7 @@
                     <tr>
                         <td>Jun 2022</td>
                         <td>Doctoral Research Scholarship</td>
-                        <td>Fonds de recherche du Qu´ebec – Nature et technologies </td>
+                        <td>Fonds de recherche du Quebec – Nature et technologies </td>
                         <td>N.A.</a></td>
                     </tr>
                     <tr>
@@ -134,12 +134,12 @@
                         <td>Department of Mechanical Engineering, U of S</td>
                         <td>N.A.</td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>Jan 2018</td>
                         <td>Mechanical Engineering Research Fellowship</td>
                         <td>Department of Mechanical Engineering, U of S</td>
                         <td>N.A.</td>
-                    </tr>
+                    </tr> -->
                     <!-- <tr>
                         <td>Aug 2014</td>
                         <td>Sponsored Student Excellence Award</td>
