--- a/teaching/thermo.html
+++ b/teaching/thermo.html
@@ -50,7 +50,7 @@
             <p> 
                 Under this program, I was teaching the subject of thermodynamics, and other subjects were led by other volunteers. There were about 60 students, who took thermodynamics with different instructors on campus, participated in my weekly tutorial classes.
             </p>
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt" type="button" data-toggle="collapse" 
@@ -70,7 +70,7 @@
                 </div>
             </div>      
             </div>
-            </div>
+            </div> -->
 
             <h3>
                 My Students' Performance 
