--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -175,7 +175,7 @@
             </tr>
             <tr>
                 <td>2015 - 2017</td>
-                <td>Program Director and Secretary</td>
+                <td>Program Director</td>
                 <td>Chinese Language Apostolate Commission, Church of Holy Family Kajang</td>
                 <td>N.A.</td>
             </tr>
