--- a/education/MSc.html
+++ b/education/MSc.html
@@ -43,7 +43,7 @@
                 Awarded By: <a href="https://www.usask.ca/">University of Saskatchewan </a>
             </h6> 
             
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                 <div class="col-md">
                     <button class="btn btn-block accordion_butt" type="button" data-toggle="collapse" data-target="#collapseExample_A" aria-expanded="false" aria-controls="collapseExample">
@@ -62,7 +62,7 @@
                 </div>
             </div>      
             </div>
-            </div>
+            </div> -->
 
             <p>
                 University of Saskatchewan (U of S) is a part of the <a href="http://www.u15.ca/">U15 group in Canada</a> who is committed to research excellence. My main focus of this degree is research on experimental fluid mechanics, and the research was complemented with knowledge gained from several graduate courses in fluid mechanics and thermal sciences.  
