--- a/education/publication.html
+++ b/education/publication.html
@@ -44,7 +44,7 @@
             </h3>
             <p> 
                 <ul>  
-                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin & J. Bergthorson (2025). <a href="https://doi.org/10.1016/j.proci.2025.105940" target="_blank">Silicon dust flames: A pathway to using silicon as a carbon-free energy carrier</a>. Proceedings of the Combustion Institute 41, 105940. [Open Access] </li>  
+                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, & J. Bergthorson (2025). <a href="https://doi.org/10.1016/j.proci.2025.105940" target="_blank">Silicon dust flames: A pathway to using silicon as a carbon-free energy carrier</a>. Proceedings of the Combustion Institute 41, 105940. [Open Access] </li>  
                     <li>H. Heng, J. Palecka, S. Goroshin, & J. Bergthorson (2024). <a href="https://doi.org/10.1016/j.proci.2024.105613" target="_blank">Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments</a>. Proceedings of the Combustion Institute 40(1-4), 105613. [Open Access] [<a href="https://www.youtube.com/watch?v=LhCFEYK3Fww" target="_blank">Distinguished Paper Award</a>] </li>  
                     <li>YE. Chew, ZW. Gan, H. Heng, P. Nair, R. Tan, & D. Foo (2023). <a href="https://doi.org/10.1007/s10098-023-02537-9" target="_blank">Carbon emissions pinch analysis (CEPA) for emissions reduction and energy planning in Canada</a>. Clean Technologies and Environmental Policy 25, 2413-2431.</li> 
                     <li>H. Heng, & D. Sumner (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005" target="_blank">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
