--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br>
             <div class="big-screen">
                 <div class="image">
-                    <img src="icon/profile_pic.jpg" width="95%">
+                    <img src="icon/profile_pic2.png" width="95%">
                 </div> 
                 <h2>
                     H. CLOUD HENG 
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-4">
                             <div style="text-align: left; padding: 5px 0px;">
-                                <img src="icon/profile_pic.jpg" width="100%">
+                                <img src="icon/profile_pic2.png" width="100%">
                             </div>
                         </div>
                         <div class="col-8">
