--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div>
                         <b>Languages:</b> 
                         <ul class="nobull">
-                            <li><i class="flag flag-icon flag-icon-gb"></i> English</li>  
+                            <li><i class="flag flag-icon flag-icon-us"></i> English</li>  
                             <li><i class="flag flag-icon flag-icon-cn"></i> Chinese</li>
                             <li><i class="flag flag-icon flag-icon-my"></i> Malay</li>
                             <li><i class="flag flag-icon flag-icon-fr"></i> French</li>
@@ -168,7 +168,7 @@
                             <div>
                                 <b>Languages:</b> 
                                 <ul class="nobull">
-                                    <li><i class="flag-icon flag-icon-gb"></i> English  
+                                    <li><i class="flag-icon flag-icon-us"></i> English  
                                     <i class="flag-icon flag-icon-cn"></i> Chinese
                                     <i class="flag-icon flag-icon-my"></i> Malay
                                     <i class="flag flag-icon flag-icon-fr"></i> French</li>
