--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </h3>
             <hr>
             <p>
-                It is my aspiration to connect with more people across the world. I value social mobilization and welcome feedback from people of various backgrounds. I embrace exchanging ideas on how to make the world a better place to live. If you think we are sharing the same values, it will be my pleasure to connect with you. If you are considering pursuing an engineering degree, please refer to <a href="../education/engineering.html">this page</a>. I can be reached at <a href="mailto:cloud.heng@mail.mcgill.ca">cloud.heng@mail.mcgill.ca</a> or via any social media platforms published on this home page. I look forward to connecting with you. 
+                It is my aspiration to connect with more people across the world. I value social mobilization and welcome feedback from people of various backgrounds. I embrace exchanging ideas on how to make the world a better place to live. If you think we are sharing the same values, it will be my pleasure to connect with you. If you are considering pursuing an engineering degree, please refer to <a href="../education/engineering.html">this page</a>. I can be reached at <a href="mailto:cloud.heng@mail.mcgill.ca">cloud.heng@mail.mcgill.ca</a> or via any social media at your wish published on this home page. I look forward to connecting with you. 
             </p>  
             
             <!-- <p id = "small_caption"><i>Icons on this page was made by 
